--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -4,8 +4,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
 </head>
-<body>
-	<div class="navbar-static-top clearfix">
+<body div class="image">
+<%= image_tag ("lock.jpg") %>
+	<div class="navbar-fixed-top">
 		<a href="#" class="navbar-brand">Ooply</a>
 		<ul class="nav navbar-nav pull-right">
 			<li><a href="about">About</a></li>
@@ -15,8 +16,12 @@
 	</div>
 	<!-- ends navbar-static-top -->
 	<div class="container">
-		<div class="flashcard">
-			<%= image_tag("") %>
+		<div class="fc">
+			<div class="row">
+				<div class="span3 offset5"> Ruby </div>
+				<div class="ofsset4">Flip</div>
+			</div>
+			
 		</div>
 		<!-- ends flashcard class -->	
 	</div> 
