--- a/app/assets/stylesheets/views.css
+++ b/app/assets/stylesheets/views.css
@@ -2,9 +2,46 @@ body{
 	background-color: transparent;
 	margin: 0 auto;
 	width: 100%
-	
+}	
+.card_holder{
+	-webkit-perspective: 1000;
+	position: absolute;
+	background-color: white; 
+}
 
+.front, .back{
 
+	width:780px;
+	height: 400px;
+}
+.card{
+	border:5px solid black;
+	font-size: 30px;
+	margin: 0 auto;
+	width: 790px;
+	height: 410px;
+	text-align: center;
+	transition: 0.6s;
+	-webkit-transform-style: preserve-3d;
+	position: relative;
+}
+
+.front, .back {
+	-webkit-backface-visibility: hidden;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+.front{
+	z-index: 2;
+	background-color: white;
+}
+
+.back{
+	-webkit-transform: rotateY(180deg);
+}
+.card_holder .flipped .card{
+	-webkit-transform: rotateY(180deg);
 }
 image_tag {
 	margin: 0 auto;
@@ -46,16 +83,7 @@ li{
 	font-size: 30px;
 
 }
-.card{
-	width: 780px;
-	height: 400px;
-	border:5px solid black;
-	font-size: 30px;
-	margin: 0 auto;
-	padding-top: 5px;
-	text-align: center;
-	/*margin:10px;*/
-}
+
 
 .category-name{
 	font-size: 20px;
