--- a/app/assets/stylesheets/views.css
+++ b/app/assets/stylesheets/views.css
@@ -40,7 +40,7 @@ body{
 .back{
 	-webkit-transform: rotateY(180deg);
 }
-.card_holder .flipped .card{
+.card_holder.flip .card{
 	-webkit-transform: rotateY(180deg);
 }
 image_tag {
