--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -12,17 +12,22 @@
 			 		
 			 		<div class="front">
 			 		 	<%= card.term %> 
-			 		 	<!-- <a href="#" class="answer">flip</a> -->
 			 		</div>
 			 		<div class="back">
 			 			<%= card.definition %>
-			 			<!-- <a href="#" class="back">back</a> -->
 			 		</div>
-			 	</div>
-			  </div>
-		<%end%>
-	 	
-	</div>
+			 	</div> <!-- ends class card --> 
+			  </div> <!-- ends class card_holer -->
+		<%end%>	
 
+
+	</div>
+			<div class="row">
+					  		<div class="next">
+					  			<button class="btn" type="button">
+					  				Next
+					  			</button>
+					  		</div>
+						</div>
 </div> 
 
