--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -227,20 +227,22 @@ body {
   font-size: 14px;
   line-height: 20px;
   color: #333333;
+
   background-color: #ffffff;
 }
 
 a {
-  color:white;
-  /*color: #0088cc;*/
+  /*color:#ffffff;*/
+
+  color: #0088cc;
   text-decoration: none;
 }
 
 a:hover,
 a:focus {
-  
-    /*color: #005580;*/
-  text-decoration: underline;
+  /*color:#2BCE92;*/
+  /*color: #ffffff;*/
+  text-decoration: none;
 }
 
 .img-rounded {
@@ -825,7 +827,7 @@ ol ul {
 }
 
 li {
-  line-height: 20px;
+  line-height: 10px;
 }
 
 ul.unstyled,
@@ -2284,7 +2286,7 @@ table th[class*="span"],
   *margin-right: .3em;
   line-height: 14px;
   vertical-align: text-top;
-  background-image: url("glyphicons-halflings.png");
+  background-image: url("../img/glyphicons-halflings.png");
   background-position: 14px 14px;
   background-repeat: no-repeat;
 }
@@ -3205,20 +3207,19 @@ button.close {
   *margin-left: .3em;
   font-size: 14px;
   line-height: 20px;
-  color: #333333;
+  /*color: #333333;*/
   text-align: center;
   text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
   vertical-align: middle;
   cursor: pointer;
-  background-color: #2BCE92;
-  /*background-color: #f5f5f5;
+ /* background-color: #f5f5f5;
   *background-color: #e6e6e6;*/
-  background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6);
+  /*background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6);
   background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6));
   background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
   background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
   background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
-  background-repeat: repeat-x;
+  background-repeat: repeat-x;*/
   border: 1px solid #cccccc;
   *border: 0;
   border-color: #e6e6e6 #e6e6e6 #bfbfbf;
@@ -3235,29 +3236,27 @@ button.close {
           box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
 }
 
-.btn:hover,
+/*.btn:hover,
 .btn:focus,
 .btn:active,
 .btn.active,
 .btn.disabled,
 .btn[disabled] {
   color: #333333;
-  background-color: #2BCE92;
- /* background-color: #e6e6e6;
-  *background-color: #d9d9d9;*/
-}
+  background-color: #e6e6e6;
+  *background-color: #d9d9d9;
+}*/
 
-.btn:active,
+/*.btn:active,
 .btn.active {
-  /*background-color: #cccccc \9;*/
-  background-color: #2BCE92;
+  background-color: #cccccc \9;
 }
-
-.btn:first-child {
+*/
+/*.btn:first-child {
   *margin-left: 0;
-}
+}*/
 
-.btn:hover,
+/*.btn:hover,
 .btn:focus {
   color: #333333;
   text-decoration: none;
@@ -3266,24 +3265,24 @@ button.close {
      -moz-transition: background-position 0.1s linear;
        -o-transition: background-position 0.1s linear;
           transition: background-position 0.1s linear;
-}
+}*/
 
-.btn:focus {
+/*.btn:focus {
   outline: thin dotted #333;
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
-}
+}*/
 
-.btn.active,
+/*.btn.active,
 .btn:active {
   background-image: none;
   outline: 0;
   -webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
      -moz-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
           box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
-}
+}*/
 
-.btn.disabled,
+/*.btn.disabled,
 .btn[disabled] {
   cursor: default;
   background-image: none;
@@ -3293,14 +3292,14 @@ button.close {
      -moz-box-shadow: none;
           box-shadow: none;
 }
-
-.btn-large {
+*/
+/*.btn-large {
   padding: 11px 19px;
   font-size: 17.5px;
   -webkit-border-radius: 6px;
      -moz-border-radius: 6px;
           border-radius: 6px;
-}
+}*/
 
 .btn-large [class^="icon-"],
 .btn-large [class*=" icon-"] {
@@ -3365,7 +3364,7 @@ input[type="button"].btn-block {
 .btn-primary {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
- /* background-color: #006dcc;
+  /*background-color: #006dcc;
   *background-color: #0044cc;*/
   background-image: -moz-linear-gradient(top, #0088cc, #0044cc);
   background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));
@@ -3386,8 +3385,8 @@ input[type="button"].btn-block {
 .btn-primary.disabled,
 .btn-primary[disabled] {
   color: #ffffff;
-  /*background-color: #0044cc;
-  *background-color: #003bb3;*/
+  background-color: #0044cc;
+  *background-color: #003bb3;
 }
 
 .btn-primary:active,
@@ -3557,13 +3556,14 @@ input[type="button"].btn-block {
 
 .btn-inverse:active,
 .btn-inverse.active {
- /* background-color: #080808 \9;*/
+  background-color: #080808 \9;
 }
 
 button.btn,
 input[type="submit"].btn {
   *padding-top: 3px;
   *padding-bottom: 3px;
+
 }
 
 button.btn::-moz-focus-inner,
@@ -4543,7 +4543,7 @@ input[type="submit"].btn.btn-mini {
      -moz-border-radius: 0;
           border-radius: 0;
 }
-/*
+
 .navbar-fixed-top,
 .navbar-fixed-bottom {
   position: fixed;
@@ -4551,13 +4551,13 @@ input[type="submit"].btn.btn-mini {
   left: 0;
   z-index: 1030;
   margin-bottom: 0;
-}*/
-/*
+}
+
 .navbar-fixed-top .navbar-inner,
 .navbar-static-top .navbar-inner {
   border-width: 0 0 1px;
-}*/
-/*
+}
+
 .navbar-fixed-bottom .navbar-inner {
   border-width: 1px 0 0;
 }
@@ -4604,7 +4604,7 @@ input[type="submit"].btn.btn-mini {
   display: block;
   float: left;
   margin: 0 10px 0 0;
-}*/
+}
 
 .navbar .nav.pull-right {
   float: right;
@@ -4629,17 +4629,17 @@ input[type="submit"].btn.btn-mini {
 
 .navbar .nav > li > a:focus,
 .navbar .nav > li > a:hover {
-  /*color: #333333;*/
-/*  text-decoration: none;
-  background-color: transparent;*/
+  color: #333333;
+  text-decoration: none;
+  background-color: transparent;
 }
 
 .navbar .nav > .active > a,
 .navbar .nav > .active > a:hover,
 .navbar .nav > .active > a:focus {
-  /*color: #555555;*/
+  color: #555555;
   text-decoration: none;
-  /*background-color: #e5e5e5;*/
+  background-color: #e5e5e5;
   -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
      -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
           box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
@@ -4821,11 +4821,12 @@ input[type="submit"].btn.btn-mini {
 }
 
 .navbar-inverse .brand {
-  color: #999999;
+  color: #ffffff;
 }
 
 .navbar-inverse .navbar-text {
-  color: #999999;
+  /*color: #999999;*/
+  color:#ffffff;
 }
 
 .navbar-inverse .nav > li > a:focus,
@@ -4842,7 +4843,8 @@ input[type="submit"].btn.btn-mini {
 }
 
 .navbar-inverse .navbar-link {
-  color: #999999;
+  /*color: #999999;*/
+  color:#ffffffn;
 }
 
 .navbar-inverse .navbar-link:hover,
@@ -5850,7 +5852,7 @@ a.badge:focus {
 
 .progress.active .bar {
   -webkit-animation: progress-bar-stripes 2s linear infinite;
-     -moz-animation: progress-bar-stripes 2s linear infinite;
+     -moz-animation: progress-bar-stripes 2s navnear infinite;
       -ms-animation: progress-bar-stripes 2s linear infinite;
        -o-animation: progress-bar-stripes 2s linear infinite;
           animation: progress-bar-stripes 2s linear infinite;
