--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,33 +1,7 @@
-<!-- <header>
-	<div class="row">	
-		<div id="ooply"><%= link_to "Ooply", root_url %></div>
-			<nav class="menu_right">
-				<ul>
-					<li>Settings</li>
-					<li><%= link_to 'About', about_path %></li>
-					<li><%= link_to 'Categories', categories_path %>
-					</li>	
-
-				</ul>
-		</nav>	
-	</div>	
-</header> -->
-
-<!-- <div class="navbar-fixed-top">
-		<div id ="title"><%= link_to "Ooply", root_path %></div>
-		<ul class="nav navbar-nav pull-right">
-			<li><%= link_to "About", about_path %></li>
-			<li><%= link_to "Categories", categories_path %></li>
-			
-		</ul>
-</div> -->
-
-
-
 <div class="navbar navbar-inverse navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container-fluid">
-      <a class="brand"><%= link_to "Ooply", root_path %></a>
+      <%= link_to "Ooply",  root_path, class: "white" %>
       <div class="nav pull-right">
         <ul class="nav">
           <li><%= link_to "About", about_path %></li>
