--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,8 +6,11 @@
         <ul class="nav">
           <li><%= link_to "About", about_path %></li>
           <li><%= link_to "Categories", categories_path %></li>
-          <li><a href="#">Sign in</a></li>
-          <li><a href="#">Log out</a></li>
+          <% if current_user %>
+           <li><%= link_to 'Logout', '/sessions/:id', method: :delete  %></li>
+          <% else %>      
+          <li><%= link_to 'Sign In', login_path %></li>  
+        <% end %>
         </ul>
       </div> <!-- .nav-collapse -->
      </div>
