--- a/app/views/registrant_mailer/registrant_mailer.text.erb
+++ b/app/views/registrant_mailer/registrant_mailer.text.erb
@@ -1,4 +1,4 @@
-To complete your Koala registration, please follow the link below:
+To complete your Ooply registration, please follow the link below:
 
 http://localhost:3000/register/<%= @registrant.code %>
 
@@ -7,4 +7,4 @@ This link will expire at <%= @registrant.expires_at %>.
 If you received this message in error, simply do nothing.
 
 
-The Koala server
+The Ooply server
