--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,11 +13,11 @@
 <% end %>
 	<p>
 	  
-	  <%= f.text_field :name, placeholder: "First Name" %>
+	  <%= f.text_field :first_name, placeholder: "First Name" %>
 	</p>
 	<p>
 	  
-	  <%= f.text_field :name , placeholder: "Last Name" %>
+	  <%= f.text_field :last_name , placeholder: "Last Name" %>
 	</p>
 
 	<p>
