--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,3 +16,22 @@
      </div>
   </div>
 </div> 
+
+<div class="container">
+  <div class="navbar">
+    <div class="pull-left">Ooply</div>
+    <div class="pull-right">
+      <div class="nav-right">
+        <ul class="nav">
+          <li><%= link_to "About", about_path %></li>
+          <li><%= link_to "Categories", categories_path %></li>
+          <% if current_user %>
+           <li><%= link_to 'Logout', '/sessions/:id', method: :delete  %></li>
+          <% else %>      
+          <li><%= link_to 'Sign In', login_path %></li>  
+        <% end %>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
