--- a/app/views/site/about.html.erb
+++ b/app/views/site/about.html.erb
@@ -1,39 +1,42 @@
+	<div class="container">
 	<div id="front-fc">
-				<div class="row" id="card_holder">
-			 		<div class="card_holder">
-							<div class="card">	
-						 		<div class="front">
-						 		 	<h1> Ooply </h1>
-									<h6 class="bubble_img"><%= image_tag("lightbulb.png")%></h6>
-						 		</div>
-						 		<div class="back">
-						 			 <table class="ooplyDef">
-										<tr>
-										<td>
-											<h1> Oop*ly</h1>
-										</td>
-										<td>
-											<h6 class="audio_icon"><%=image_tag("audio_icon.png")%></h6>
-										</td>
-										<td>
-											<h5 class="oopSpelling">
-												[ooo-p-ly]
-											</h5>
-										</td>
-										</tr>
-										<tr>
-											<td>
-												<h4><i>noun</i></h4>
-											</td>
-										</tr>
-									</table> 
-										<p>a flashcard app designed to help to help Shana learn rails and other topics related to the course. She still has more to learn and needs to add more terms and categories. She plans to continue working on this project and promises that the real about page will not have this information. </p> 
+		<div class="row" id="card_holder">
+	 		<div class="card_holder">
+					<div class="card">	
+				 		<div class="front">
+				 		 	<h1> Ooply </h1>
+							<h6 class="bubble_img"><%= image_tag("lightbulb.png")%></h6>
+				 		</div>
+				 		<div class="back">
+				 			 <table class="ooplyDef">
+								<tr>
+								<td>
+									<h1> Oop*ly</h1>
+								</td>
+								<td>
+									<h6 class="audio_icon"><%=image_tag("audio_icon.png")%></h6>
+								</td>
+								<td>
+									<h5 class="oopSpelling">
+										[ooo-p-ly]
+									</h5>
+								</td>
+								</tr>
+								<tr>
+									<td>
+										<h4><i>noun</i></h4>
+									</td>
+								</tr>
+							</table> 
+									<p>
+										a flashcard app designed to help to help Shana learn rails and other topics related to the course. She still has more to learn and needs to add more terms and categories. She plans to continue working on this project and promises that the real about page will not have this information. 
+									</p> 
 						 		</div>
 						 	</div>  
 						  </div> 
 				</div> <!-- ends id card_holder -->
 		</div>
-			<button type="button" class="playHere white btn"><%= link_to "Play Today", categories_path %>
+			<button type="button" class="btn"><%= link_to "Play Today", categories_path %>
 			</button>
 
 			<table>
@@ -50,4 +53,4 @@
 			</table>
 
 			
-
+</div>
